feat: add filtering by created_at, updated_at, name(for service) and version(for version APIs)
